# spatiotemporal_db

./: .env  .env.example  .gitignore  DEPLOY.md  SETUP_WINDOWS.md  pyproject.toml  requirements.txt  schema.sql
app/: __init__.py  auth.py  config.py  db.py  main.py  models.py
app/routes/: entity.py  export.py  photo.py  query.py
doc/: DESIGN_v1.md  api-usage-guide.md  place-detection-design.md  timeline-engine-design-v2.md
ingesters/: download-icloud-files.ps1  location_data.py  photos.py
migrations/: 001_initial.sql  002_sample_data.sql  003_fix_column_names.sql  004_fix_trange.sql  005_engine_additions.sql
scripts/: setup-windows.ps1
tests/: conftest.py  test_bbox_query.py  test_entity.py  test_performance_simple.py  test_stats.py  test_time_query.py
